# lz4test

./: CMakeLists.txt  build.sh
Apps/Android/: local.properties
Apps/Android/app/: build.gradle
Apps/Android/app/src/main/: AndroidManifest.xml
Apps/Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Apps/Android/app/src/main/cpp/includes/: lz4test.hpp
Apps/Android/app/src/main/java/com/larryhou/lz4test/: MainActivity.java
Apps/Android/app/src/main/res/layout/: activity_main.xml
Apps/Android/app/src/main/res/values/: strings.xml
Apps/Android/gradle/wrapper/: gradle-wrapper.properties
Apps/iOS/include/: lz4test.hpp
Apps/iOS/lz4test/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  ViewController.mm  main.m
Apps/iOS/lz4test-swift/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift  lz4test-swift-Bridging-Header.h
Apps/iOS/lz4test-swift/Base.lproj/: Main.storyboard
Apps/iOS/lz4test.xcodeproj/: project.pbxproj
Apps/iOS/lz4test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Apps/iOS/lz4test/Base.lproj/: Main.storyboard
include/lz4/: lz4.h  lz4hc.h
lz4test/: lz4test.cpp  lz4test.hpp  main.cpp
lz4test.xcodeproj/: project.pbxproj
lz4test.xcodeproj/xcshareddata/xcschemes/: lz4test.xcscheme
